--- a/WarehouseEcommerce/Views/Theme/University/Shared/_DeliveryInfoPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_DeliveryInfoPartial.cshtml
@@ -5,7 +5,7 @@
     <section class="nb_sec nb_header_btm_beedsec">
         <div class="nb_sec_navwrap">
             <div class="container">
-                <div class="navListWrap">
+                <div class="navListWrap" id="marqueeWrap">
                     <ul class="nb_sec_navlist">
                         @foreach (var item in Model)
                         {
